syntax = "proto3";
package com.ifit.glassos;
import "util/Util.proto";
import "workout/data/Control.proto";
import "workout/WorkoutResult.proto";
option java_package = "com.ifit.glassos.workout";
option java_outer_classname = "SpeedServiceProto";
option java_multiple_files = true;
option swift_prefix = "IFit";

message SpeedMetric {
  string workoutID = 1;
  int32 timeSeconds = 2;
  double lastKph = 3;
  double maxKph = 4;
  double avgKph = 5;
  double minKph = 6;
}

message SpeedMetricList {
  repeated SpeedMetric metrics = 1;
}

message SpeedRequest {
  double kph = 1;
}

service SpeedService {
  // check whether Speed is Readable and Writeable
  rpc CanRead(Empty) returns (AvailabilityResponse) {}
  rpc CanWrite(Empty) returns (AvailabilityResponse) {}

  // get the current Speed relative to the current workout
  rpc GetSpeed(Empty) returns (SpeedMetric) {}

  // sets the Speed to the given value
  rpc SetSpeed(SpeedRequest) returns (WorkoutResult) {}

  // subscribe to Speed updates relative to the current workout
  rpc SpeedSubscription(Empty) returns (stream SpeedMetric) {}

  // gets a list of all of the Speed changes for the given workout ID
  rpc GetSpeedHistory(WorkoutID) returns (SpeedMetricList) {}

  // follow the current workout
  rpc FollowWorkout(Empty) returns (WorkoutResult) {}

  // stop following the current workout
  rpc StopFollowing(Empty) returns (Empty) {}

  // check whether the current workout is being followed
  rpc GetIsFollowing(Empty) returns (BooleanResponse) {}
  // subscribe to following updates
  rpc IsFollowingSubscription(Empty) returns (stream BooleanResponse) {}

  // get the current workout controls
  rpc GetControls(Empty) returns (ControlList) {}
  // subscribe to workout control updates
  rpc ControlsSubscription(Empty) returns (stream ControlList) {}
}
